# buddy-council-plugin

./: .gitignore  .mcp.example.json  CLAUDE.md  README.md  settings.json
.claude-plugin/: marketplace.json  plugin.json
.plugin/: marketplace.json  plugin.json
agents/: contradiction-agent.agent.md  contradiction-agent.md  coverage-agent.agent.md  coverage-agent.md  onboarding-agent.agent.md  ticket-validation-agent.agent.md
commands/: ask.md  contradiction.md  coverage.md  onboarding.md  setup.md  validate.md
config/: sources.example.json
core/: pyproject.toml
core/src/buddy_council/: __init__.py  cli.py  config.py  models.py  normalization.py
core/src/buddy_council/analyzers/: __init__.py  anthropic.py  base.py  contradiction.py  prompts.py
core/src/buddy_council/providers/: __init__.py  base.py  excel.py  registry.py  testrail.py
core/src/buddy_council/reports/: contradiction.py
docs/: architecture.md  rag-vs-plugin-comparison.md
hooks/: hooks.json  validate-bash.sh
mcp-servers/jama-server/: README.md  server.py
mcp-servers/jira-server/: README.md  pyproject.toml  server.py
mcp-servers/testrail-server/: README.md  pyproject.toml  server.py
providers/excel/: fetch.md
providers/jama/: fetch.md
providers/jira/: fetch.md
providers/testrail/: fetch.md
skills/: detect-contradictions.md  fetch-requirements.md  fetch-test-cases.md  normalize-artifacts.md
skills/analyze-coverage/: SKILL.md
skills/assess-feature/: SKILL.md
skills/build-onboarding-plan/: SKILL.md
skills/demo-feature/: SKILL.md
skills/detect-contradictions/: SKILL.md
skills/detect-ticket-gaps/: SKILL.md
(+7 files in other folders)
