[project]
name = "buddy-council"
version = "0.1.0"
description = "Portable core for multi-agent requirements/test-case analysis"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "httpx>=0.27",
    "openpyxl>=3.1",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.5",
]

[project.scripts]
buddy-council = "buddy_council.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/buddy_council"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
