[project]
name = "jira-mcp-server"
version = "0.1.0"
description = "MCP server wrapping the Jira Cloud REST API"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
